<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">广本长捷</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
	
    <string name="newsinfo">广本长捷</string>
    <string name="trafficrules">行车守则</string>
    <string name="onlinebooking">在线预约</string>
    <string name="nifrs">救援服务</string>
    <string name="member">会员中心</string>
    
    <string name="key_error">key值不正确</string>
    <string name="net_error">网络出错</string>
    
    <string name="user_center">个人账户</string>
    <string name="user_shangpu">积分商铺</string>
    <string name="user_pinggu">二手车评估</string>
    <string name="user_tuijian">车友推荐</string>
    <string name="user_dian">广本长怡店</string>
    <string name="user_fankui">意见反馈</string>
    <string name="user_outdriver">出行指南</string>
    <string name="user_youhao">油耗统计</string>
    <string name="user_weizhang">违章查询</string>
    <string name="user_baoxian">保险服务</string>
    <string name="user_weixiu">维修履历</string>
    <string name="user_message">消息提醒</string>
    <string name="user_coupon">优惠劵</string>
    
    <string name="fault">仪表盘故障灯</string>
    <string name="tips">行车小贴士</string>
    
    <string name="call_num">010-83557399</string>
    <string name="call_str">呼叫</string>
    <string name="cancel">取消</string>
    <string name="user_login">在线登陆</string>
    <string name="user_name">用  户  名 :</string>
    <string name="user_pwd">登录密码:</string>
    
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注          册</string>
    <string name="login">登          录</string>
    
    <string name="exit">退出</string>
    
    <string name="car_nifrs">车辆事故快速诊断</string>
    <string name="img_memo">点击添加图片按钮，添加事故图片，您提交后我们的服务人员会在第一时间与您联系</string>
    <string name="phone_hint">请务必填写，便于我们联系</string>
    
    <string name="send_call">发送位置数据并呼叫救援中心</string>
    
    <string-array name="hobby">        
	     <item>相机</item>            
	     <item>相册</item>            
	     <item>取消</item>        
    </string-array>
    
<!--     <string-array name="tab_titles"> -->
<!--         <item>新闻</item> -->
<!--         <item>活动</item> -->
<!--         <item>月刊</item> -->
<!--         <item>新浪微博</item> -->
<!--         <item>车型展示</item> -->
<!--         <item>备件信息</item> -->
<!--         <item>新车试驾</item> -->
<!--     </string-array> -->
    
    <string name="tip_exit_app">再按一次退出应用</string>
    
    <string name="title_activity_navi_demo">NaviDemo</string>
    
</resources>