<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/title" 
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/top_bg"
        android:gravity="center"
        android:layout_alignParentTop="true">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onlinebooking"
            android:textColor="#ffff"
            android:textSize="20sp"/>
    </RelativeLayout>
    <RelativeLayout 
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/activity_loginbg"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="11dp"
                android:text="@string/user_login"
                android:textColor="#000"
                android:textSize="18sp"/>
            <TextView 
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="72dp"
                android:text="@string/user_name"
                android:textColor="#444"
                android:textSize="16sp"/>
            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="33dp"
                 android:layout_toRightOf="@id/name_title"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="70dp"
                 android:background="@drawable/comment_lay_bg"
                >
	            <EditText 
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint=""
	                android:focusableInTouchMode="true"
          		    android:focusable="true"
	                android:layout_marginLeft="2dp"
	                android:textSize="15sp"/>
            </RelativeLayout>
            <TextView 
                android:id="@+id/pwd_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="122dp"
                android:text="@string/user_pwd"
                android:textColor="#444"
                android:textSize="16sp"/>
            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="33dp"
                 android:layout_toRightOf="@id/pwd_title"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="120dp"
                 android:background="@drawable/comment_lay_bg"
                >
	            <EditText 
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint=""
	                android:focusableInTouchMode="true"
            		android:focusable="true"
	                android:layout_marginLeft="2dp"
	                android:textSize="15sp"/>
            </RelativeLayout>
            <Button 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pwd"
                android:background="@null"
                android:textColor="#09F"
                android:textSize="14sp"
                android:layout_marginTop="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:onClick="forgetPwd"/>
            <Button 
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/yy_red_btn"
                android:text="@string/register"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="200dp"
                android:onClick="register"/>
            <Button 
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/yy_submit"
                android:text="@string/login"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="200dp"
                android:onClick="login"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>