<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent" 
   android:background="#ffff"      
   >
   <RelativeLayout 
       android:layout_centerInParent="true"
       android:layout_width="300dp"
       android:layout_height="100dp"
       >
       <RelativeLayout 
           android:id="@+id/call_title"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:background="#333"
           >
           <ImageView 
               android:id="@+id/tips_call_img"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/tips_call"
               android:layout_alignParentLeft="true"
               android:layout_centerVertical="true"
               android:layout_marginLeft="20dp"
               android:contentDescription="@string/app_name"
               />
           <TextView 
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerVertical="true"
               android:layout_toRightOf="@id/tips_call_img"
               android:layout_marginLeft="20dp"
               android:text="@string/call_num"
               android:textColor="#ffff"
               android:textSize="18sp"/>
       </RelativeLayout>
       <RelativeLayout 
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginLeft="2dp"
           android:layout_marginRight="2dp"
           android:layout_marginBottom="2dp"
           android:padding="5dp"
           android:gravity="center_vertical"
           android:layout_below="@id/call_title"
           android:background="#999">
           <Button
               android:id="@+id/call"
               android:layout_width="wrap_content"
               android:minWidth="140dp"
               android:layout_height="match_parent"
               android:text="@string/call_str"
               android:textColor="#000"
               android:textSize="15sp"
               android:background="#CCC"
               android:onClick="call"/>
           <Button
               android:id="@+id/cancel"
               android:layout_width="wrap_content"
               android:minWidth="140dp"
               android:layout_height="match_parent"
               android:layout_toRightOf="@id/call"
               android:layout_marginLeft="3dp"
               android:text="@string/cancel"
               android:textColor="#000"
               android:textSize="15sp"
               android:background="#CCC"
               android:onClick="cancel"/>
       </RelativeLayout>
   </RelativeLayout>
</RelativeLayout>