<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout 
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/top_bg"
        >
        <ImageButton 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/backicon"
            android:background="@null"
            android:onClick="back"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/car_nifrs"
            android:textColor="#ffff"
            android:textSize="20sp"/>
    </RelativeLayout>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:background="@drawable/xc_bg">
            <ImageView
                android:id="@+id/img_title" 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/on_wenzi"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/app_name"/>
            <LinearLayout 
                android:id="@+id/phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_title"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <ImageButton 
                    android:id="@+id/car_img"
                    android:layout_width="110dp"
                    android:layout_height="85dp"
                    android:src="@drawable/car_img1"
                    android:contentDescription="@string/app_name"
                    android:background="@null"
                    android:onClick="sendImg"/>
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/img_memo"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/edit_text" 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/help_phone_input"
                android:layout_below="@id/phone_num"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="20dp">
                <EditText 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_hint"
                    android:layout_marginLeft="105dp"/>
            </RelativeLayout>
            <ImageView
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text"
                android:src="@drawable/shadow_on"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/app_name"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_below="@id/img2"
                android:background="@drawable/help_photo_btn"
                android:layout_centerHorizontal="true"
                android:text="@string/send_call"
                android:textColor="#ffff"
                android:textSize="18sp"
                android:onClick="send_call"/>
    </RelativeLayout>
</RelativeLayout>